Added instructions on how to run the app. #1